# playground-transcriber

./: .gitignore  README.md  pyproject.toml
scripts/: setup.sh
transcriber/: __init__.py  cli.py  core.py
